	PR c++/68385

* tree.c (integer_zerop, integer_onep, integer_each_onep)
	(integer_all_onesp, integer_minus_onep, integer_pow2p)
	(integer_nonzerop, integer_truep, tree_log2, tree_floor_log2)
	(real_zerop, real_onep, real_minus_onep): Remove STRIP_NOPS.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@230871 138bc75d-0d04-0410-961f-82ee72b054a4